--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "personal-biomedical-data-analytics",
   "version": "1.0.0",
-  "type": "module",
+  "private": true,
   "scripts": {
-    "dev": "node index.js"
+    "build": "webpack",
+    "dev": "webpack serve --mode development"
   },
   "dependencies": {
     "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "streamlit-component-lib": "^1.0.0"
   },
   "devDependencies": {
